Correct the base URL

--- a/404.html
+++ b/404.html
@@ -4,18 +4,18 @@
 <head>
   <meta charset="utf-8"> <meta name="description" content="">
 
- <link rel="icon" href="/lukeluocn.github.io/multicoresysu2020/images/favicon.png" type="image/png">
+ <link rel="icon" href="/multicoresysu2020/images/favicon.png" type="image/png">
  
   <title>404 Page not found</title>
 
    
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/nucleus.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/fontawesome-all.min.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/hybrid.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/featherlight.min.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/perfect-scrollbar.min.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/theme.css?1587315888" rel="stylesheet">
-    <link href="/lukeluocn.github.io/multicoresysu2020/css/hugo-theme.css?1587315888" rel="stylesheet">
+    <link href="/multicoresysu2020/css/nucleus.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/fontawesome-all.min.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/hybrid.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/featherlight.min.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/perfect-scrollbar.min.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/theme.css?1587317148" rel="stylesheet">
+    <link href="/multicoresysu2020/css/hugo-theme.css?1587317148" rel="stylesheet">
     
 <style>
     :root #header + #content > #left > #rlblock_left {
@@ -46,8 +46,8 @@
           </p>
           <p>Woops. Looks like this page doesn&#39;t exist ¯\_(ツ)_/¯.</p>
           <p></p>
-          <p><a href='/lukeluocn.github.io/multicoresysu2020/'>Go to homepage</a></p>
-          <p><img src='/lukeluocn.github.io/multicoresysu2020/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
+          <p><a href='/multicoresysu2020/'>Go to homepage</a></p>
+          <p><img src='/multicoresysu2020/images/gopher-404.jpg' style="width:50%" alt="Page not found!"></p>
         </div>
       </div>
 
